@@ -35,17 +35,11 @@ double europeanOptionImpliedVolatilityEngine(std::string type,
     const QuantLib::Size maxEvaluations = 100;
     const double tolerance = 1.0e-6;
 
-#ifdef QL_HIGH_RESOLUTION_DATE
-    // in minutes
-    boost::posix_time::time_duration length = boost::posix_time::minutes(boost::uint64_t(maturity * 360 * 24 * 60));
-#else
-    int length = int(maturity*360 + 0.5); // FIXME: this could be better
-#endif
-
     QuantLib::Option::Type optionType = getOptionType(type);
 
     QuantLib::Date today = QuantLib::Date::todaysDate();
     QuantLib::Settings::instance().evaluationDate() = today;
+    QuantLib::Date exDate = getExerciseDate(today, maturity);
 
     // new framework as per QuantLib 0.3.5
     // updated for 0.3.7
@@ -59,11 +53,7 @@ double europeanOptionImpliedVolatilityEngine(std::string type,
     auto qTS = flatRate(today,qRate,dc);
     auto rRate = qlext::make_shared<QuantLib::SimpleQuote>(riskFreeRate);
     auto rTS = flatRate(today,rRate,dc);
-#ifdef QL_HIGH_RESOLUTION_DATE
-    QuantLib::Date exDate(today.dateTime() + length);
-#else
-    QuantLib::Date exDate = today + length;
-#endif
+
     auto exercise = qlext::make_shared<QuantLib::EuropeanExercise>(exDate);
     auto payoff = qlext::make_shared<QuantLib::PlainVanillaPayoff>(optionType, strike);
     auto option = makeOption(payoff, exercise, spot, qTS, rTS, volTS, Analytic,
@@ -91,17 +81,11 @@ double americanOptionImpliedVolatilityEngine(std::string type,
     const QuantLib::Size maxEvaluations = 100;
     const double tolerance = 1.0e-6;
 
-#ifdef QL_HIGH_RESOLUTION_DATE
-    // in minutes
-    boost::posix_time::time_duration length = boost::posix_time::minutes(boost::uint64_t(maturity * 360 * 24 * 60));
-#else
-    int length = int(maturity*360 + 0.5); // FIXME: this could be better
-#endif
-
     QuantLib::Option::Type optionType = getOptionType(type);
 
     QuantLib::Date today = QuantLib::Date::todaysDate();
     QuantLib::Settings::instance().evaluationDate() = today;
+    QuantLib::Date exDate = getExerciseDate(today, maturity);
 
     // new framework as per QuantLib 0.3.5
     QuantLib::DayCounter dc = QuantLib::Actual360();
@@ -114,11 +98,6 @@ double americanOptionImpliedVolatilityEngine(std::string type,
     auto rRate = qlext::make_shared<QuantLib::SimpleQuote>(riskFreeRate);
     auto rTS = flatRate(today,rRate,dc);
 
-#ifdef QL_HIGH_RESOLUTION_DATE
-    QuantLib::Date exDate(today.dateTime() + length);
-#else
-    QuantLib::Date exDate = today + length;
-#endif
     QuantLib::Settings::instance().evaluationDate() = today;
 
     auto exercise = qlext::make_shared<QuantLib::AmericanExercise>(today, exDate);
