@@ -1,3 +1,12 @@
+2024-07-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/utils.cpp (getExerciseDate): New helper function
+	* inst/include/rquantlib_internal.h: Declaration
+	* src/asian.cpp: Use new helper function
+	* src/barrier_binary.cpp: Idem
+	* src/implieds.cpp Idem
+	* src/vanilla.cpp: Idem
+
 2024-07-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/asian.cpp: Minor refactoring and C++ update
